css - fix the sync button position on mobile

--- a/frontend/appComponents/Header/components/CoursesDropdown/index.scss
+++ b/frontend/appComponents/Header/components/CoursesDropdown/index.scss
@@ -108,7 +108,7 @@
       min-width: 58px !important;
       height: 26px !important;
       top: 7px;
-      right: -5px;
+      right: 5px;
       padding: 0;
       &.-saving {
         cursor: default;
