--- a/frontend/appComponents/Header/index.scss
+++ b/frontend/appComponents/Header/index.scss
@@ -60,13 +60,13 @@
     justify-content: space-between;
 
     .button{
-      margin-right: 10px;
       height: 31px;
       font-size: 11px;
-
       text-transform: uppercase;
-      font-size: 11px;
-      min-width: 100px;
+      min-width: auto;
+    }
+    .button.create{
+      margin-right: 10px;
     }
   }
 
